[gd_scene load_steps=12 format=3 uid="uid://b4x2nq7hn8bb7"]

[ext_resource type="Texture2D" uid="uid://bxgrrnv6pvsct" path="res://Assets/Character/player_idle.png" id="1_1no7q"]
[ext_resource type="Script" path="res://jason_test/sunshine.gd" id="1_vun8k"]
[ext_resource type="Shader" path="res://jason_test/enemy_0.gdshader" id="2_cux7i"]
[ext_resource type="Texture2D" uid="uid://fv4213wqj518" path="res://jason_test/sunshine.png" id="3_3voeh"]
[ext_resource type="PackedScene" uid="uid://cj544myivxn40" path="res://jason_test/enemy_death_explosion.tscn" id="4_kjtpl"]
[ext_resource type="AudioStream" uid="uid://bko5o7nj0wdru" path="res://Assets/Audio/SFX/shoot_cloak_enemy_short.wav" id="5_hsss5"]

[sub_resource type="SphereShape3D" id="SphereShape3D_mb7tq"]
radius = 3.16424

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wit2p"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("2_cux7i")
shader_parameter/flash_color = Color(1.5, 0, 0, 1)
shader_parameter/active = false
shader_parameter/sprite_texture = ExtResource("3_3voeh")

[sub_resource type="AtlasTexture" id="AtlasTexture_7imdd"]
atlas = ExtResource("1_1no7q")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_c5q74"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7imdd")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_0xl65"]
height = 0.660419
radius = 0.145474

[node name="sunshine" type="CharacterBody3D" groups=["enemies"]]
transform = Transform3D(1.15464, 0, 0, 0, 1.15464, 0, 0, 0, 1.15464, 0, 0.0141568, 0)
collision_layer = 2
collision_mask = 5
script = ExtResource("1_vun8k")

[node name="LineOfSight" type="RayCast3D" parent="."]
transform = Transform3D(0.7269, 0, 0, 0, -1.60176e-07, -1, 0, 3.66441, -4.37114e-08, 0.00505462, -0.00430323, 0.00419959)
collision_mask = 5

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1.92334, 0, 0, 0, 1.00109, 0, 0, 0, 1.4979, 0, 0, 0)
collision_layer = 2
collision_mask = 7

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 0.220594, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("SphereShape3D_mb7tq")

[node name="vision" type="Node3D" parent="."]
transform = Transform3D(0.998246, 0, 0, 0, 0.998246, 0, 0, 0, 0.998246, 0, 0, 0)

[node name="ReloadTimer" type="Timer" parent="."]
one_shot = true

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
avoidance_enabled = true
height = 0.01
neighbor_distance = 0.1

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
transform = Transform3D(1.13439, 0, 0, 0, 1.13439, 0, 0, 0, 1.13439, 0.0175953, 0.0100964, -0.00312762)
material_override = SubResource("ShaderMaterial_wit2p")
billboard = 1
shaded = true
texture_filter = 0
sprite_frames = SubResource("SpriteFrames_c5q74")
animation = &"idle"

[node name="HitTimer" type="Timer" parent="."]
wait_time = 0.12

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(0.49, 0, 0, 0, 0.25568, 0, 0, 0, 0.787365, 0, 0, 0)
shape = SubResource("CylinderShape3D_0xl65")

[node name="death" parent="." instance=ExtResource("4_kjtpl")]

[node name="ShootAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_hsss5")
volume_db = -4.452

[node name="spawntimer" type="Timer" parent="."]
wait_time = 10.553

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="HitTimer" to="." method="_on_hit_timer_timeout"]
